--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -53,6 +53,8 @@
     
 </head>
 <body class="antialiased">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T63QRLFT" height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"></iframe></noscript>
     <!-- Skip to main content for accessibility -->
     <a href="#main-content" class="sr-only focus:not-sr-only focus:absolute focus:top-0 focus:left-0 bg-navy-deep text-white p-2 z-50">Saltar para o conteúdo principal</a>
     
