--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -64,12 +64,11 @@
     
     <!-- Google Tag Manager -->
     {% if site.analytics.gtmId %}
-    <script>
-      // Initialize dataLayer for early tracking
-      window.dataLayer = window.dataLayer || [];
-      window.dataLayer.push({'gtm.start': Date.now(), event: 'gtm.js'});
-    </script>
-    <script async src="https://www.googletagmanager.com/gtm.js?id={{ site.analytics.gtmId }}&l=dataLayer"></script>
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','{{ site.analytics.gtmId }}');</script>
     {% endif %}
     <!-- End Google Tag Manager -->
     
@@ -77,9 +76,8 @@
 <body class="antialiased">
     <!-- Google Tag Manager (noscript) -->
     {% if site.analytics.gtmId %}
-    <noscript>
-      <iframe src="https://www.googletagmanager.com/ns.html?id={{ site.analytics.gtmId }}" height="0" width="0" class="hidden invisible w-0 h-0 overflow-hidden" aria-hidden="true"></iframe>
-    </noscript>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ site.analytics.gtmId }}"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     {% endif %}
     <!-- Skip to main content for accessibility -->
     <a href="#main-content" class="sr-only focus:not-sr-only focus:absolute focus:top-0 focus:left-0 bg-navy-deep text-white p-2 z-50">Saltar para o conteúdo principal</a>
