--- a/src/_includes/components/legal-page.njk
+++ b/src/_includes/components/legal-page.njk
@@ -29,7 +29,7 @@
                                replace("{{event.location.city}}", event.location.city) | 
                                replace("{{event.location.country}}", event.location.country) | 
                                replace("{{event.date.durationHours}}", event.date.durationHours) | 
-                               replace("{{event.capacity.firstLot}}", event.capacity.firstLot) | safe }}
+                               replace("{{event.capacity.totalCapacity}}", event.capacity.firstLot) | safe }}
           </p>
           {% endif %}
 
