--- a/src/garantia-reembolso.njk
+++ b/src/garantia-reembolso.njk
@@ -7,4 +7,4 @@ eleventyNavigation:
 ---
 
 {% set pageData = legal.guaranteeRefund %}
-{% include "components/legal-page.njk" %}
+{% include "sections-legacy/legal-page.njk" %}
