--- a/src/politica-privacidade.njk
+++ b/src/politica-privacidade.njk
@@ -7,4 +7,4 @@ eleventyNavigation:
 ---
 
 {% set pageData = legal.privacyPolicy %}
-{% include "components/legal-page.njk" %}
+{% include "sections-legacy/legal-page.njk" %}
