--- a/src/termos-condicoes.njk
+++ b/src/termos-condicoes.njk
@@ -7,4 +7,4 @@ eleventyNavigation:
 ---
 
 {% set pageData = legal.termsConditions %}
-{% include "components/legal-page.njk" %}
+{% include "sections-legacy/legal-page.njk" %}
